--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <section class="section-1">
         <h1 class="section-heading">Variety of Foods</h1>
         <div class="section-1-icons">
-          <i class="fas fa-egg"></i>
+          <i class="fas fa-egg change"></i>
           <i class="fas fa-stroopwafel"></i>
-          <i class="fas fa-chese"></i>
+          <i class="fas fa-cheese"></i>
           <i class="fas fa-hotdog"></i>
           <i class="fas fa-drumstick-bite"></i>
           <i class="fas fa-apple-alt"></i>
