--- a/index.html
+++ b/index.html
@@ -107,8 +107,29 @@
           </a>
         </div>
       </section>
-
       <!-- End of Section 3-->
+
+      <!-- Section 4-->
+      <section class="section-4">
+        <div class="section-4-text">
+          <h2 class="section-4-heading">Sign Me up</h2>
+          <p class="section-4-paragraph">
+            Be the first to know about new products
+          </p>
+        </div>
+        <from class="signup-form">
+          <input
+            type="email"
+            class="signup-form-input"
+            placeholder="Enter Your Email"
+          />
+          <button type="submit" class="signup-form-btn">
+            <i class="fas fa-arrow-right"></i>
+          </button>
+        </from>
+        <p class="copyright">CodeAndCreate &copy; All Rights Reserved</p>
+      </section>
+      <!-- End of Section 4-->
     </div>
 
     <script src="script.js"></script>
